# miniKedro

./: Makefile  README.md  config.yml  dataset.ipynb  pyproject.toml  run.py  run_v1.py  run_v2.py  run_v3.py  run_v4.py  run_v5.py  run_v6.py  run_v7.py  run_v8.py  run_v9.py  stats.json
conf/base/: catalog.yml
data/01_raw/: companies.csv
src/minikedro/: __init__.py  settings.py
src/minikedro/pipelines/data_processing/: pipeline.py
src/minikedro/pipelines/data_processing_minikedro/: pipeline.py
src/minikedro/v1/: __init__.py
src/minikedro/v2/: __init__.py  config.yml
src/minikedro/v3/: __init__.py
src/minikedro/v4/: __init__.py
src/minikedro/v5/: __init__.py
src/minikedro/v6/: __init__.py
src/minikedro/v7/: __init__.py  config.yml
src/minikedro/v9/: __init__.py
